<resources>
    <string name="app_name">pset2</string>
    <string name="mad">Welcome to Mad Libs! I will ask you to fill in words to complete a story. You won\'t be able to see thew hole story untill you are done filling in all the missing words. That\'s part of the fun. Click below to get started. </string>
    <string name="start">Let\'s Start</string>

    <string name="select">Select:</string>


    <string-array name="madlibs">
        <item>Simple</item>
        <item>Tarzan</item>
        <item>University</item>
        <item>Clothes</item>
        <item>Dance</item>
        <item>Random</item>
    </string-array>

    <string name="fill">Fill in the words!</string>
    <string name="ok">OK</string>

    <!-- The possible selections -->
    <string name="simple">Simple</string>
    <string name="tarzan">Tarzan</string>
    <string name="uni">University</string>
    <string name="clothes">Clothes</string>
    <string name="dance">Dance</string>
    <string name="random">Random Story</string>

    <string name="give">Please give a/n: </string>
    <string name="left">words left!</string>

    <string name="your">Your Mad Lib Story!</string>


</resources>
